# kcm-repo-toggle

./: .gitignore  CMakeLists.txt
src/: AuthHelper.cpp  AuthHelper.h  CMakeLists.txt  Module.cpp  Module.h  Module.ui  Netrunner.json  SuiteInfo.cpp  SuiteInfo.h  channel-switch.desktop  kcmchannelswitch.actions  kcmrepotoggle.actions  kcmrepotoggle.desktop  main.cpp
src/channels/KDE neon/: debian-testing.list
src/channels/Maui/: maui-backports.list  maui-neon-backports.list
src/channels/Netrunner Desktop/: netrunner-backports.list  netrunner-backports.lists
src/channels/general-use/: .directory
src/channels/ubuntu/: ubuntu-backports.list  ubuntu-updates.list
